--- a/src/styles.css
+++ b/src/styles.css
@@ -1,10 +1,3 @@
-input {
-    border: 2px solid red;
-    font-size: 32px;
-    color: blue;
-}
-
-h1 {
-    font-size: 32px;
-    color: blue;
-}
+/* .product-card {
+    width: 18rem;
+}  */
