--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,10 @@
 /* .product-card {
     width: 18rem;
 }  */
+
+
+.footer-icon-instagram {
+    font-size: 48px;
+    height: 32px;
+    width: 32px;
+} 
