--- a/src/components/ProductCard/css/product-card.css
+++ b/src/components/ProductCard/css/product-card.css
@@ -1,10 +1,14 @@
 
 /* Estilo para ubicar el button de descuento sobre la imagen */
 
-.product-card-img .button-discount {
+.product-card .button-discount {
     position: absolute;
     top: 5%;
     left: 85%;
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
   }
+
+/* .product-card-precio {
+    color: green;
+} */
