working on 2da entrega

--- a/src/components/Products/ProductCard/css/product-card.css
+++ b/src/components/Products/ProductCard/css/product-card.css
@@ -1,4 +1,9 @@
 
+.product-card .imagen {
+  height: 30vh;
+  object-fit: contain;
+}
+
 
 .product-card .button-discount {
     position: absolute;
